Feat: 스플래시 화면 초안 구성

--- a/SeSACStudyRecruitSLP/Base.lproj/LaunchScreen.storyboard
+++ b/SeSACStudyRecruitSLP/Base.lproj/LaunchScreen.storyboard
@@ -8,6 +8,11 @@
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Dongle-Regular.ttf">
+            <string>Dongle-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="EHf-IW-A2E">
@@ -24,20 +29,14 @@
                                     <constraint firstAttribute="width" constant="220" id="NDZ-XI-8Md"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vmj-dl-0Qs">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SeSAC Study" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vmj-dl-0Qs">
                                 <rect key="frame" x="32.666666666666657" y="523.66666666666663" width="328" height="112"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="328" id="iqM-hE-TZP"/>
                                     <constraint firstAttribute="height" constant="112" id="q4k-rr-vfU"/>
                                 </constraints>
-                                <attributedString key="attributedText">
-                                    <fragment content="SeSAC Study">
-                                        <attributes>
-                                            <font key="NSFont" metaFont="system" size="17"/>
-                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
-                                        </attributes>
-                                    </fragment>
-                                </attributedString>
+                                <fontDescription key="fontDescription" name="Dongle-Regular" family="Dongle" pointSize="72"/>
+                                <color key="textColor" red="0.28627450980392155" green="0.86274509803921573" blue="0.5725490196078431" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
